<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ps5_krone.MainActivity" >

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:columnCount="3"
        android:orientation="vertical"
        android:rowCount="7" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|top"
            android:layout_row="0"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/investmentAmount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText3"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="1"
            android:text="@string/years"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="2"
            android:text="@string/interestRate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="3"
            android:text="@string/futureValue"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1" />

    </GridLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/gridLayout1"
        android:layout_centerVertical="true"
        android:layout_marginTop="74dp"
        android:enabled="false"
        android:text="@string/calculate" />

</RelativeLayout>